--- a/app.json
+++ b/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "AwesomeProject",
     "slug": "AwesomeProject",
+   
+   
+    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"],
+ 
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,13 +22,20 @@
       "supportsTablet": true
     },
     "android": {
+      "googleServicesFile":"./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.mussafarariaz.AwesomeProject"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "904ca0f5-e520-4036-9d77-7c05f93f396b"
+      }
     }
   }
 }
